--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "express": "^4.17.1",
     "firebase": "^7.8.1",
     "firebase-admin": "^8.9.2",
-    "firebase-functions": "^3.3.0"
+    "firebase-functions": "^3.3.0",
+    "vue": "^2.6.11"
   },
   "devDependencies": {},
   "scripts": {
